// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a polymorphicChildId when __typename field is present 1`] = `
Array [
  Object {
    "modelName": "Post",
    "payload": Object {
      "__typename": "Post",
      "id": "2",
      "title": "Hey",
    },
  },
  Object {
    "modelName": "SearchResult",
    "payload": Object {
      "content": "Post-2",
      "id": "1",
    },
  },
]
`;

exports[`handles null children 1`] = `
Array [
  Object {
    "modelName": "Activity",
    "payload": Object {
      "action": "tag",
      "comment": null,
      "id": "1",
    },
  },
]
`;

exports[`produces a flat list from a "nested-totals-style" response 1`] = `
Array [
  Object {
    "modelName": "Group",
    "payload": Object {
      "avatarUrl": "http://foo.com/avatar.png",
      "bannerUrl": "http://foo.com/banner.png",
      "id": "1",
      "memberCount": 42,
      "name": "foo",
      "posts": Array [
        "2",
        "3",
      ],
      "slug": "foo",
    },
  },
  Object {
    "modelName": "Post",
    "payload": Object {
      "groups": Array [
        "1",
      ],
      "id": "2",
      "title": "Hello!",
    },
  },
  Object {
    "modelName": "Post",
    "payload": Object {
      "groups": Array [
        "1",
      ],
      "id": "3",
      "title": "Hello Again!",
    },
  },
]
`;

exports[`produces a flat list from a "separate-totals-style" response 1`] = `
Array [
  Object {
    "modelName": "Person",
    "payload": Object {
      "avatarUrl": "https://www.gravatar.com/avatar/32f7ff34c3b5a8600b79be9a85a5c92f?d=mm&s=140",
      "bannerUrl": "https://pbs.twimg.com/profile_banners/18696471/1435442798/1500x500",
      "id": "46816",
      "name": "Rich",
    },
  },
  Object {
    "modelName": "Person",
    "payload": Object {
      "avatarUrl": "https://www.gravatar.com/avatar/32f7ff34c3b5a8600b79be9a85a5c92f?d=mm&s=140",
      "id": "99",
      "name": "Flargle Argleson",
    },
  },
  Object {
    "modelName": "Group",
    "payload": Object {
      "id": "1836",
      "members": Array [
        "99",
      ],
      "name": "Wombats",
    },
  },
  Object {
    "modelName": "Comment",
    "payload": Object {
      "createdAt": "Fri Mar 24 2017 10:55:41 GMT+1300 (NZDT)",
      "creator": "46816",
      "id": "1",
      "post": "30002",
      "text": "<p>Here's a comment!</p>",
    },
  },
  Object {
    "modelName": "Post",
    "payload": Object {
      "commentsTotal": "1",
      "createdAt": "Sat Mar 18 2017 10:48:43 GMT+1300 (NZDT)",
      "creator": "46816",
      "details": "<p><a href=\\"https://wombat.life\\">https://wombat.life</a></p>
<p></p>
<p></p>",
      "endsAt": null,
      "followers": Array [
        "46816",
      ],
      "followersTotal": "1",
      "fulfilledAt": null,
      "groups": Array [
        "1836",
      ],
      "groupsTotal": "1",
      "id": "30002",
      "startsAt": null,
      "title": "Hello",
      "type": null,
    },
  },
  Object {
    "modelName": "Comment",
    "payload": Object {
      "createdAt": "Fri Mar 24 2017 10:50:41 GMT+1300 (NZDT)",
      "creator": "46816",
      "id": "2",
      "post": "30003",
      "text": "<p>Another comment.</p>",
    },
  },
  Object {
    "modelName": "Post",
    "payload": Object {
      "commentsTotal": "1",
      "createdAt": "Sat Mar 18 2017 10:49:43 GMT+1300 (NZDT)",
      "creator": "46816",
      "details": "<p>So true.</p>",
      "endsAt": null,
      "followers": Array [
        "46816",
      ],
      "followersTotal": "1",
      "fulfilledAt": null,
      "groups": Array [
        "1836",
      ],
      "groupsTotal": "1",
      "id": "30003",
      "startsAt": null,
      "title": "Yup",
      "type": null,
    },
  },
  Object {
    "modelName": "Me",
    "payload": Object {
      "avatarUrl": "http://foo.com/bar.png",
      "id": "1",
      "name": "Foo Bar",
      "posts": Array [
        "30002",
        "30003",
      ],
    },
  },
]
`;
